# JSD-Tim7

./: LICENSE  README.md  main.py  output.html  pyproject.toml  setup.cfg  setup.py
Example/: recipe_example.rcp
VSC Extension/rcp-snippets/: CHANGELOG.md  README.md  package.json
VSC Extension/recipejsd/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
VSC Extension/recipejsd/snippets/: snippets.code-snippets
VSC Extension/recipejsd/syntaxes/: rcp.tmLanguage.json
generator/: README.md  setup.cfg  setup.py
generator/recipe_generator/: __init__.py  generator.py
metamodel/: README.md  setup.cfg  setup.py
metamodel/recipe_jsd/: __init__.py  grocery.tx  model.py  recipe.py  recipe.tx
src/: main.py  output.html  utils.py
src/Example/: recipe_example.rcp
src/generator/: generator.py
src/metamodel/: grocery.tx  model.py  modul.tx  recipe.py  recipe.tx
src/templates/: recipeTemplate.jinja
templates/: recipeTemplate.jinja
