[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe"
version = "0.0.1"
license = {text = "MIT License"}
authors = [ {name = "Stefan Apostolovic", email = "stefan.apostolovic@gmail.com"}]
dependencies = [
    "arpeggio",
"Brotli==1.1.0",
"cffi==1.16.0",
"cssselect2==0.7.0",
"fonttools==4.47.2",
"html5lib==1.1",
"Jinja2==3.1.3",
"MarkupSafe==2.1.3",
"pillow==10.2.0",
"pycparser==2.21",
"pydyf==0.8.0",
"pyphen==0.14.0",
"six==1.16.0",
"textX==4.0.1",
"tinycss2==1.2.1",
"weasyprint==60.2",
"webencodings==0.5.1",
"zopfli==0.2.3",
"numpy",
    'importlib-metadata; python_version<"3.10"'
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true


[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
rcp-run="main:main"